--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -82,7 +82,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Deploy via SSH
-        if: secrets.DEPLOY_HOST && secrets.SSH_PRIVATE_KEY
+        if: ${{ secrets.DEPLOY_HOST != '' && secrets.SSH_PRIVATE_KEY != '' }}
         uses: appleboy/ssh-action@v0.1.8
         with:
           host: ${{ secrets.DEPLOY_HOST }}
@@ -93,10 +93,10 @@ jobs:
             # Adjust the commands below to match your remote host layout.
             set -euo pipefail
             echo "Deploy: change to deploy directory"
-            cd ${REMOTE_DIR:-/var/www/html} || exit 1
+            cd ${{ secrets.REMOTE_DIR || '/var/www/html' }} || exit 1
             echo "Fetching latest"
             git fetch --all
-            git reset --hard ${GITHUB_SHA}
+            git reset --hard ${{ github.sha }}
             echo "Pulling updated images and restarting (if using docker-compose)"
             docker compose pull || true
             docker compose up -d --build || true
