--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -77,23 +77,29 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     if: github.ref == 'refs/heads/main'
+    env:
+      DEPLOY_HOST: ${{ secrets.DEPLOY_HOST }}
+      DEPLOY_USER: ${{ secrets.DEPLOY_USER }}
+      SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+      SSH_PORT: ${{ secrets.SSH_PORT }}
+      REMOTE_DIR: ${{ secrets.REMOTE_DIR }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
       - name: Deploy via SSH
-        if: ${{ secrets.DEPLOY_HOST != '' && secrets.SSH_PRIVATE_KEY != '' }}
+        if: ${{ env.DEPLOY_HOST != '' && env.SSH_PRIVATE_KEY != '' }}
         uses: appleboy/ssh-action@v0.1.8
         with:
-          host: ${{ secrets.DEPLOY_HOST }}
-          username: ${{ secrets.DEPLOY_USER }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          port: ${{ secrets.SSH_PORT || '22' }}
+          host: ${{ env.DEPLOY_HOST }}
+          username: ${{ env.DEPLOY_USER }}
+          key: ${{ env.SSH_PRIVATE_KEY }}
+          port: ${{ env.SSH_PORT || '22' }}
           script: |
             # Adjust the commands below to match your remote host layout.
             set -euo pipefail
             echo "Deploy: change to deploy directory"
-            cd ${{ secrets.REMOTE_DIR || '/var/www/html' }} || exit 1
+            cd ${REMOTE_DIR:-/var/www/html} || exit 1
             echo "Fetching latest"
             git fetch --all
             git reset --hard ${{ github.sha }}
