--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
       - "8081:80"
     volumes:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
-      - ./www:/usr/share/nginx/html:rw
+      - ./www:/usr/share/nginx/html:ro
     depends_on:
       - php-fpm
 
@@ -13,5 +13,5 @@ services:
     image: php:8.2-fpm
     restart: always
     volumes:
-      - ./www:/usr/share/nginx/html:rw 
-
+      - ./www:/usr/share/nginx/html:rw
+      - ./config:/usr/local/config:ro
